tests/ui/debuginfo/debuginfo-type-name-layout-ice-94961-2.stderr
error[E0080]: values of the type `[u8; usize::MAX]` are too big for the target architecture
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
   = note: evaluation of `<Foo<u8> as std::mem::SizedTypeProperties>::SIZE` failed here

note: the above error was encountered while instantiating `fn std::mem::size_of::<Foo<u8>>`
  --> $DIR/debuginfo-type-name-layout-ice-94961-2.rs:16:5
   |
LL |     std::mem::size_of::<Foo<u8>>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
